Add store endpoints
