# middleware/validate.js
@@ -44,7 +44,28 @@ const validatePainting = (req, res, next) => {
   });
 };
 
+const validateStore = (req, res, next) => {
+  const validationRule = {
+    name: 'required|string',
+    itemType: 'required|in:painting,sculpture',
+    itemId: 'required|hex|size:24',
+    date: 'required|date',
+  };
+  validator(req.body, validationRule, {}, (err, status) => {
+    if (!status) {
+      res.status(412).json({
+        success: false,
+        message: 'Validation failed',
+        data: err
+      });
+    } else {
+      next();
+    }
+  });
+};
+
 module.exports = {
   validateUser,
-  validatePainting
+  validatePainting,
+  validateStore
 };
