# routes/index.js
@@ -2,7 +2,7 @@ const router = require('express').Router();
 
 router.use('/painting', require('./paintingRoute'));
 // router.use('/sculpture', require('./sculptureRoute'));
-// router.use('/store', require('./storeRoute'));
+router.use('/store', require('./storeRoute'));
 router.use('/user', require('./userRoute'));
 
 module.exports = router;
