# swagger-output-localhost.json
@@ -7,11 +7,15 @@
   },
   "host": "localhost:3000",
   "basePath": "/",
-  "schemes": ["http"],
+  "schemes": [
+    "http"
+  ],
   "paths": {
     "/painting/": {
       "post": {
-        "tags": ["Painting"],
+        "tags": [
+          "Painting"
+        ],
         "description": "",
         "parameters": [
           {
@@ -46,7 +50,9 @@
                 },
                 "tags": {
                   "type": "array",
-                  "example": ["any"],
+                  "example": [
+                    "any"
+                  ],
                   "items": {
                     "type": "string"
                   }
@@ -71,7 +77,9 @@
         }
       },
       "get": {
-        "tags": ["Painting"],
+        "tags": [
+          "Painting"
+        ],
         "description": "",
         "responses": {
           "200": {
@@ -85,7 +93,9 @@
     },
     "/painting/{id}": {
       "get": {
-        "tags": ["Painting"],
+        "tags": [
+          "Painting"
+        ],
         "description": "",
         "parameters": [
           {
@@ -108,7 +118,9 @@
         }
       },
       "put": {
-        "tags": ["Painting"],
+        "tags": [
+          "Painting"
+        ],
         "description": "",
         "parameters": [
           {
@@ -149,7 +161,9 @@
                 },
                 "tags": {
                   "type": "array",
-                  "example": ["any"],
+                  "example": [
+                    "any"
+                  ],
                   "items": {
                     "type": "string"
                   }
@@ -177,7 +191,9 @@
         }
       },
       "delete": {
-        "tags": ["Painting"],
+        "tags": [
+          "Painting"
+        ],
         "description": "",
         "parameters": [
           {
@@ -205,7 +221,9 @@
     },
     "/painting/tag/{tag}": {
       "get": {
-        "tags": ["Painting"],
+        "tags": [
+          "Painting"
+        ],
         "description": "",
         "parameters": [
           {
@@ -227,7 +245,9 @@
     },
     "/painting/artist/{artist}": {
       "get": {
-        "tags": ["Painting"],
+        "tags": [
+          "Painting"
+        ],
         "description": "",
         "parameters": [
           {
@@ -247,9 +267,215 @@
         }
       }
     },
+    "/store/": {
+      "post": {
+        "tags": [
+          "Store"
+        ],
+        "description": "",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "name": {
+                  "type": "string",
+                  "example": "any"
+                },
+                "itemType": {
+                  "type": "string",
+                  "example": "any"
+                },
+                "itemId": {
+                  "type": "string",
+                  "example": "any"
+                },
+                "date": {
+                  "type": "string",
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "201": {
+            "description": "Created"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "412": {
+            "description": "Precondition Failed"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      },
+      "get": {
+        "tags": [
+          "Store"
+        ],
+        "description": "",
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/store/{id}": {
+      "get": {
+        "tags": [
+          "Store"
+        ],
+        "description": "",
+        "produces": [
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      },
+      "put": {
+        "tags": [
+          "Store"
+        ],
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "name": {
+                  "type": "string",
+                  "example": "any"
+                },
+                "itemType": {
+                  "type": "string",
+                  "example": "any"
+                },
+                "itemId": {
+                  "type": "string",
+                  "example": "any"
+                },
+                "date": {
+                  "type": "string",
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "204": {
+            "description": "No Content"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "412": {
+            "description": "Precondition Failed"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      },
+      "delete": {
+        "tags": [
+          "Store"
+        ],
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "204": {
+            "description": "No Content"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/store/type/{type}": {
+      "get": {
+        "tags": [
+          "Store"
+        ],
+        "description": "",
+        "parameters": [
+          {
+            "name": "type",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
     "/user/": {
       "post": {
-        "tags": ["User"],
+        "tags": [
+          "User"
+        ],
         "description": "",
         "parameters": [
           {
@@ -293,7 +519,9 @@
         }
       },
       "get": {
-        "tags": ["User"],
+        "tags": [
+          "User"
+        ],
         "description": "",
         "responses": {
           "200": {
@@ -307,7 +535,9 @@
     },
     "/user/{id}": {
       "get": {
-        "tags": ["User"],
+        "tags": [
+          "User"
+        ],
         "description": "",
         "parameters": [
           {
@@ -330,7 +560,9 @@
         }
       },
       "put": {
-        "tags": ["User"],
+        "tags": [
+          "User"
+        ],
         "description": "",
         "parameters": [
           {
@@ -383,7 +615,9 @@
         }
       },
       "delete": {
-        "tags": ["User"],
+        "tags": [
+          "User"
+        ],
         "description": "",
         "parameters": [
           {
